instability of estimates

--- a/Variance/variance.ipynb
+++ b/Variance/variance.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,10 +58,10 @@
     "\n",
     "# Sort them\n",
     "X = np.sort(X)\n",
-    "print 'X: %s' %(X)\n",
+    "print('X: %s' %(X))\n",
     "\n",
     "mu = np.mean(X)\n",
-    "print 'Mean of X:', mu"
+    "print('Mean of X:', mu)"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "print 'Range of X: %s' %(np.ptp(X))"
+    "print('Range of X: %s' %(np.ptp(X)))"
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -117,14 +117,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute deviation of X: 20.52\n"
+      "Mean absolute deviation of X: 20.520000000000003\n"
      ]
     }
    ],
    "source": [
     "abs_dispersion = [np.abs(mu - x) for x in X]\n",
     "MAD = np.sum(abs_dispersion)/len(abs_dispersion)\n",
-    "print 'Mean absolute deviation of X:', MAD"
+    "print('Mean absolute deviation of X:', MAD)"
    ]
   },
   {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -153,13 +153,13 @@
      "output_type": "stream",
      "text": [
       "Variance of X: 670.16\n",
-      "Standard deviation of X: 25.8874486962\n"
+      "Standard deviation of X: 25.887448696231154\n"
      ]
     }
    ],
    "source": [
-    "print 'Variance of X:', np.var(X)\n",
-    "print 'Standard deviation of X:', np.std(X)"
+    "print('Variance of X:', np.var(X))\n",
+    "print('Standard deviation of X:', np.std(X))"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -191,8 +191,8 @@
     "k = 1.25\n",
     "dist = k*np.std(X)\n",
     "l = [x for x in X if abs(x - mu) <= dist]\n",
-    "print 'Observations within', k, 'stds of mean:', l\n",
-    "print 'Confirming that', float(len(l))/len(X), '>', 1 - 1/k**2"
+    "print('Observations within', k, 'stds of mean:', l)\n",
+    "print('Confirming that', float(len(l))/len(X), '>', 1 - 1/k**2)"
    ]
   },
   {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -224,8 +224,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Semivariance of X: 689.512727273\n",
-      "Semideviation of X: 26.2585743572\n"
+      "Semivariance of X: 689.5127272727273\n",
+      "Semideviation of X: 26.258574357202395\n"
      ]
     }
    ],
@@ -235,8 +235,8 @@
     "\n",
     "semivar = np.sum( (lows - mu) ** 2 ) / len(lows)\n",
     "\n",
-    "print 'Semivariance of X:', semivar\n",
-    "print 'Semideviation of X:', np.sqrt(semivar)"
+    "print('Semivariance of X:', semivar)\n",
+    "print('Semideviation of X:', np.sqrt(semivar))"
    ]
   },
   {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -258,8 +258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target semivariance of X: 188\n",
-      "Target semideviation of X: 13.7113092008\n"
+      "Target semivariance of X: 188.5\n",
+      "Target semideviation of X: 13.729530217745982\n"
      ]
     }
    ],
@@ -268,8 +268,8 @@
     "lows_B = [e for e in X if e <= B]\n",
     "semivar_B = sum(map(lambda x: (x - B)**2,lows_B))/len(lows_B)\n",
     "\n",
-    "print 'Target semivariance of X:', semivar_B\n",
-    "print 'Target semideviation of X:', np.sqrt(semivar_B)"
+    "print('Target semivariance of X:', semivar_B)\n",
+    "print('Target semideviation of X:', np.sqrt(semivar_B))"
    ]
   },
   {
@@ -301,21 +301,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "base",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12 (main, Apr  5 2022, 06:57:45) \n[GCC 10.2.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+   }
   }
  },
  "nbformat": 4,
