--- a/Mean/mean.ipynb
+++ b/Mean/mean.ipynb
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 06:57:45) \n[GCC 10.2.0]"
   },
   "vscode": {
    "interpreter": {
